name:                k8s-env-converter
version:             0.1.0.0
synopsis:            Convert between dotenv files and Kubernetes secrets
description:         Please see README.md
homepage:            https://github.com/feynmanliang/k8s-env-converter#readme
license:             BSD3
license-file:        LICENSE
author:              Feynman Liang
maintainer:          feynman.liang@gmail.com
copyright:           (c) 2017 Feynman Liang
category:            Command Line, Development, Utils
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable k8s-env-converter
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
